EKS/pingpong-gitops/k8s-manifests/backend-deploment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: pingpong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      nodeSelector:
          role: backend
      containers:
      - name: backend
        image: yismaili/pingpong-backend:latest
        ports:
        - containerPort: 3001
