EKS/pingpong-gitops/k8s-manifests/frontend-deploment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: pingpong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      nodeSelector:
        role: frontend
      containers:
      - name: frontend
        image: yismaili/pingpong-frontend:latest
        ports:
        - containerPort: 3000
